log/log_cnli_0828_attend_10.txt
  File "/home/hwwang/workplace/deeplearning/textentailment/multiffn-nli-master_back/multiffn-nli-master/src/train.py", line 27
    parser.add_argument('--validation',
         ^
SyntaxError: invalid syntax
